--- a/Project3-Report.tex
+++ b/Project3-Report.tex
@@ -348,8 +348,50 @@ K-maps shown below indicate the implicates used in the minimal expressions.\\
 
 
 \subsection{Final Minimal Expressions}
-Show the final minimal expressions of the logic functions in forms of OR-AND 
-switching expressions and the final schematic of the circuit.
+After drawing the K-maps (from the previous section), we got the following 
+minimal switching expressions in OR-AND form.\\
+
+\begin{equation*}
+z_1 = (s_1)(s'_0 + x_1)(x_0)
+\end{equation*}
+
+\begin{equation*}
+z_1 = (s_1)(x_1)(s'_0)
+\end{equation*}
+
+\begin{equation*}
+J_1 = (x_0)(s_0 + x_1)
+\end{equation*}
+
+\begin{equation*}
+K_1 = (x_0)(s'_0 + x_1)
+\end{equation*}
+
+\begin{equation*}
+J_0 = (s'_1)(x_0)
+\end{equation*}
+
+\begin{equation*}
+K_0 = (x_0)(s_1 + x_1)
+\end{equation*}
+
+\clearpage
+
+Combining each individual subnetwork of logic gates, we get the following 
+circuit design.
+
+\begin{figure}[h!]
+\centering
+\includegraphics[scale=0.3]{Network}
+\end{figure}
+
+\begin{table}[h!]
+\begin{tabular}{ c c }
+\centering
+\includegraphics[scale=0.3]{z1} &
+\includegraphics[scale=0.3]{z0} \\
+\end{tabular}
+\end{table}
 
 
 \subsection{Paper-and-Pencil Design}
